feat(i18n): 添加语言设置相关翻译文本
refactor(设置组件): 使用翻译文本替代硬编码
refactor(翻译钩子): 优化翻译更新机制

style(工作流文件): 移除多余空格并统一格式
docs(README): 优化表格格式和排版

--- a/i18n/en-US.json
+++ b/i18n/en-US.json
@@ -111,7 +111,9 @@
     "clearLocalStorage": "Clear local storage",
     "clearIndexedDB": "Clear IndexedDB",
     "clearCache": "Clear cache",
-    "settingsSaved": "Settings saved"
+    "settingsSaved": "Settings saved",
+    "language": "Language",
+    "languageDesc": "Select your preferred interface language"
   },
   "domainManager": {
     "whitelistDomains": "Whitelist Domains",
